--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-pyTelegramBotAPI
-flask
-pymongo[srv]
-python-dotenv
+pyTelegramBotAPI==4.14.0
+Flask==3.0.0
+pymongo[srv]==4.6.0
+python-dotenv==1.0.0
+Werkzeug==3.0.1
